--- a/drivers/media/platform/msm/camera_v2/Kconfig
+++ b/drivers/media/platform/msm/camera_v2/Kconfig
@@ -217,6 +217,15 @@ config OV8825
 		2 mipi lanes, preview config = 1632*1224 30 fps,
 		snapshot config = 3264 * 2448 at 18 fps.
 		2 lanes max fps is 18, 4 lanes max fps is 24.
+		
+config OV8858
+	bool "OmniVision OV8858 (BAYER 8MP)"
+	depends on MSMB_CAMERA
+	---help---
+		OmniVision 8 MP Bayer Sensor with auto focus.uses
+		2 mipi lanes, preview config = 1632*1224 30 fps,
+		snapshot config = 3264 * 2448 at 18 fps.
+		2 lanes max fps is 18, 4 lanes max fps is 24.
 
 config OV8865
 	bool "OmniVision OV8865 (BAYER 8MP)"
@@ -235,6 +244,17 @@ config s5k4e1
 		supports 720P preview at 30 fps
 		and QSXGA snapshot at 15 fps.
 		This sensor driver does not support auto focus.
+
+
+config OV2680
+	bool "Sensor OV2680 (BAYER 2M)"
+	depends on MSMB_CAMERA
+	---help---
+		OmniVision 2 MP Bayer Sensor, only use 1 mipi lane,
+		preview set to 800*600 at 30 fps,
+		snapshot set to 1600*1200 at 15 fps,
+		This sensor driver does not support auto focus.
+
 
 config OV12830
 	bool "OmniVision OV12830 (BAYER 12MP)"
