--- a/drivers/media/platform/msm/camera_v2/Kconfig
+++ b/drivers/media/platform/msm/camera_v2/Kconfig
@@ -226,6 +226,25 @@ config OV8865
 		4 mipi lanes, preview config = 1632*1224 30 fps,
 		snapshot config = 3264 * 2448 at 30 fps.
 		Max fps is 30fps at 3264 * 2448, 60fps at 1632 * 1224
+		
+config OV8858
+	bool "OmniVision OV8858 (BAYER 8MP)"
+	depends on MSMB_CAMERA
+	---help---
+		OmniVision 8 MP Bayer Sensor with auto focus.uses
+		2 mipi lanes, preview config = 1632*1224 30 fps,
+		snapshot config = 3264 * 2448 at 18 fps.
+		2 lanes max fps is 18, 4 lanes max fps is 24.
+		
+config OV2680
+	bool "Sensor OV2680 (BAYER 2M)"
+	depends on MSMB_CAMERA
+	---help---
+		OmniVision 2 MP Bayer Sensor, only use 1 mipi lane,
+		preview set to 800*600 at 30 fps,
+		snapshot set to 1600*1200 at 15 fps,
+		This sensor driver does not support auto focus.
+
 
 config s5k4e1
 	bool "Sensor s5k4e1 (BAYER 5MP)"
